feat(vmm): add an new rpc interface, to return guest memory regions
